test/errors/js_errors3.input.asm
* = $801

!use "./js_errors3" as p

!let a = p(0)   ; works
!let b = p(10)  ; throws
